--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <web-app xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xmlns="http://xmlns.jcp.org/xml/ns/javaee" xsi:schemaLocation="http://xmlns.jcp.org/xml/ns/javaee http://xmlns.jcp.org/xml/ns/javaee/web-app_3_1.xsd" id="WebApp_ID" version="3.1">
-  <display-name>shop-4</display-name>
+  <display-name>zips</display-name>
   <welcome-file-list>
     <welcome-file>index.html</welcome-file>
     <welcome-file>index.htm</welcome-file>
@@ -10,7 +10,7 @@
     <welcome-file>default.jsp</welcome-file>
   </welcome-file-list>
    <servlet>
-  	<servlet-name>shop-4</servlet-name>
+  	<servlet-name>zips</servlet-name>
   	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
   	<init-param>
   		<param-name>contextConfigLocation</param-name>
@@ -22,7 +22,7 @@
   	<load-on-startup>1</load-on-startup>
   </servlet>
    <servlet-mapping>
-  	<servlet-name>shop-4</servlet-name>
+  	<servlet-name>zips</servlet-name>
   	<url-pattern>*.shop</url-pattern>
   </servlet-mapping>
   
