--- a/pom.xml
+++ b/pom.xml
@@ -109,6 +109,13 @@
 	    <artifactId>commons-fileupload</artifactId>
 	    <version>1.3.1</version>
 	</dependency>
+	<!-- JSON 처리를 위한 디펜던시 -->
+	<dependency>
+    <groupId>com.fasterxml.jackson.core</groupId>
+    <artifactId>jackson-databind</artifactId>
+    <version>2.9.5</version>
+	</dependency>
+	
   </dependencies>
   <build>
     <finalName>zips</finalName>
