--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
     <version>2.9.5</version>
 	</dependency>
 	
+	<dependency> 
+    <groupId>org.springframework</groupId>
+    <artifactId>spring-websocket</artifactId>
+    <version>4.3.14.RELEASE</version>
+	</dependency>
+	
   </dependencies>
   <build>
     <finalName>zips</finalName>
