--- a/pom.xml
+++ b/pom.xml
@@ -116,6 +116,12 @@
     <version>2.9.5</version>
 	</dependency>
 	
+	<dependency>
+    <groupId>org.codehaus.jackson</groupId>
+    <artifactId>jackson-mapper-asl</artifactId>
+    <version>1.4.2</version>
+	</dependency>
+	
 	<dependency> 
     <groupId>org.springframework</groupId>
     <artifactId>spring-websocket</artifactId>
