--- a/pom.xml
+++ b/pom.xml
@@ -128,6 +128,12 @@
     <version>4.3.14.RELEASE</version>
 	</dependency>
 	
+	<dependency>
+    <groupId>org.jsoup</groupId>
+    <artifactId>jsoup</artifactId>
+    <version>1.10.3</version>
+	</dependency>
+	
   </dependencies>
   <build>
     <finalName>zips</finalName>
